# narraytica

./: .env.example  .envrc  .gitignore  .markdown-link-check.json  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  repo-tree.txt
.github/workflows/: ci.yml  docs.yml  migrations.yml  release.yml  security.yml
apps/: README.md
apps/admin-console/: README.md
apps/clipquote/: README.md
apps/creator-intelligence/: README.md
apps/debatemap/: README.md
apps/insightmonitor/: README.md
apps/lecturefinder/: README.md
apps/linguatube-studio/: README.md
apps/speakerdna/: README.md
apps/trendpulse/: README.md
apps/videoresearch-pro/: README.md
deployments/: README.md
deployments/local/: README.md
deployments/production/: README.md
deployments/staging/: README.md
docs/: README.md  commands.md  style-guide.md
epics/: README.md  epic-00-foundation.md  epic-01-data-model.md  epic-02-ingestion.md  epic-03-transcription.md  epic-04-search.md  epic-05-core-api-v1.md  epic-06-ai-layers.md  epic-07-speakers.md  epic-08-advanced-search.md  epic-09-obs-ops.md  epic-10-testing-quality.md  epic-11-deployment-cicd.md  epic-template.md  roadmap.md
infra/: README.md
refacto/: 00-audit.md  01-phase-1.md  02-phase-2.md  03-phase-3.md  04-phase-4.md  05-phase-5.md  06-phase-6.md  07-phase-7.md  08-phase-8.md  10-arbo-cible.md
services/api/: ARCHITECTURE.md  ERROR_MODEL.md  RATE_LIMITS.md  README.md  alembic.ini  pyproject.toml  pytest.ini
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_base_schema.py  0002_api_keys.py
services/api/src/: config.py  main.py  settings.py  test_style.py
services/api/src/auth/: api_keys.py  deps.py  errors.py
services/api/src/db/: engine.py  schema.py
services/api/src/domain/: ingestion_contract.py  ingestion_validation.py  job_event_response.py  job_response.py  job_run_response.py  search-response_v1.py  search_filters.py
services/api/src/middleware/: __init__.py  rate_limit.py
services/api/src/narralytica_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/api/src/routes/: health.py  ingest.py  jobs.py  metrics.py  search.py  segments.py  speakers.py  transcripts.py  v1.py  videos.py
services/api/src/search/: adapter.py
services/api/src/search/hybrid/: merge.py
services/api/src/search/opensearch/: bootstrap.py  client.py  lexical_query.py
services/api/src/search/opensearch/templates/: videos.template.json
services/api/src/search/qdrant/: embeddings_client.py  filters.py  vector_search.py
services/api/src/services/: db.py  idempotency.py  ingest_port.py  jobs_repo.py  segments_repo.py  speakers_repo.py  transcripts_repo.py  videos_repo.py
services/api/src/telemetry/: api_version.py  http_logging.py  logging.py  otel.py  request_context.py  request_id.py
services/api/src/wiring/: health.py  search.py  search_deps.py
services/api/tests/: conftest.py  test_ingest.py  test_rate_limit.py
services/api/tests/integration/: conftest.py  opensearch_seed.py  test_opensearch_bootstrap_idempotent.py  test_search_bootstrap_idempotent.py  test_search_e2e.py
services/api/tests/jobs/: test_jobs_contract_response.py
services/api/tests/search/: test_hybrid_merge.py  test_lexical_query.py  test_search_contract_response.py  test_search_filters_v1.py  test_search_response_stability.py  test_vector_search.py
tests/: README.md
tools/: README.md
(+179 files in other folders)
