[project]
name = "narralytica"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
  "ruff>=0.6.0",
  "black>=24.0.0",
  "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "B", "UP"]
ignore = []
src = ["services", "packages", "tests"]

[tool.black]
line-length = 88
target-version = ["py312"]
