[project]
name = "narralytica-api"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.2.1",

  # DB + migrations
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.1.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]
