[project]
name = "narralytica-api"
version = "0.0.0"
description = "Narralytica API service"
requires-python = ">=3.13"
dependencies = [
  # web
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.40.0",
  "pydantic-settings>=2.12.0",
  "python-dotenv>=1.2.0",
  "pyyaml>=6.0.0",

  # db + migrations
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.0",

  # metrics
  "prometheus-client>=0.20.0",

  # tracing
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-exporter-otlp>=1.26.0",
  "opentelemetry-instrumentation-fastapi>=0.47b0",
  "opentelemetry-instrumentation-asgi>=0.47b0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=9.0.0",
]
